made some changes

--- a/index.html
+++ b/index.html
@@ -15,25 +15,45 @@
       </div>
       <div class="right-side">
         <div class="logo-wrapper flex">
-            <div class="logo-wrapper-item flex">
-                <img src="./Photos/ef-logo.png" class="ef-logo" alt="EF logo" />
-            </div>
+          <div class="logo-wrapper-item flex">
+            <img src="./Photos/ef-logo.png" class="ef-logo" alt="EF logo" />
+          </div>
         </div>
         <div class="form-wrapper flex">
           <form action="">
             <div class="input-wrapper username flex">
-              <label for="">Username</label>
-              <input type="text" placeholder="Enter your Fullname" />
+              <label for="username">Username</label>
+              <input type="text" name="username" placeholder="Enter your Fullname" />
             </div>
             <div class="input-wrapper password flex">
-              <label for="">Password</label>
-              <input type="password" placeholder="**********************" />
+              <label for="password">Password</label>
+              <input type="password" name="password" placeholder="**********************" />
             </div>
             <div class="input-wrapper email flex">
-              <label for="">Email</label>
-              <input type="email" placeholder="Enter your E-mail Address" />
+              <label for="email">Email</label>
+              <input type="email" name="email" placeholder="Enter your E-mail Address" />
             </div>
           </form>
+        </div>
+        <div class="mobile-form-wrapper">
+          <form action="">
+            <div class="input-wrapper username flex">
+              <label for="username-email">Username or Email</label>
+              <input type="text" name="username-email" placeholder="Therappertainer@gmail.com" />
+            </div>
+            <div class="input-wrapper username flex">
+              <label for="password2">Password</label>
+              <input type="text" name="password2" placeholder="Enter your Fullname" />
+            </div>
+          </form>
+          <div class="forgot-password">
+            <a href="#">Forgot password?</a>
+          </div>
+          <div class="mobile-button-wrapper">
+            <button>
+              Log In
+            </button>
+          </div>
         </div>
         <div class="terms-services flex">
           <label class="toggle">
@@ -47,7 +67,7 @@
         <div class="login flex">
           <p>Already have an account? <a href="#">Log In</a></p>
         </div>
-        <div class="socials-wrapper flex">
+        <div class="desktop-socials-wrapper flex">
           <div>
             <img src="./Photos/Ellipse 1.png" alt="" />
           </div>
